Issue #279 select2 drop hidden overflow

--- a/docroot/sites/all/themes/informea.theme/css/style-from-less.css
+++ b/docroot/sites/all/themes/informea.theme/css/style-from-less.css
@@ -333,6 +333,9 @@
 [dir] .search-block .block-geographic-region .select2-container.select2-container-active {
   border-bottom: 1px solid;
 }
+.select2-drop-active {
+  overflow: hidden;
+}
 [dir] .select2-drop-active {
   border: 1px solid #fc3;
 }
