--- a/docroot/sites/all/themes/informea.theme/less/components/select2.less
+++ b/docroot/sites/all/themes/informea.theme/less/components/select2.less
@@ -1,6 +1,7 @@
 // General select2 styling
 .select2-drop-active {
   border: 1px solid #fc3;
+  overflow: hidden;
 }
 .select2-results ul.select2-result-sub {
   padding: 0;
